Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-45185

Magma/Collections: tombstone purging doesn't adjust collection disk size

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 7.1.0
    • Cheshire-Cat
    • couchbase-bucket
    • Triaged
    • 1
    • No
    • KV 2021-Nov, KV 2021-Dec

    Description

      The disk utilisation tracking for collections isn't accounting for tombstone purging.

      E.g.

      1. store k1 -> disk size = 80
      2. del k1 -> disk size = 16 (tombstone is accounted)
      3. later compact and purge -> disk size = 16

      Tests added for MB-45132 skip magma but could be adapted to give magma coverage

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ankush.sharma Ankush Sharma
              jwalker Jim Walker
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty